fix button and pointer styling on small devices + miscellaneous changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ header{
     box-shadow: black -10px 15px 8px;
     border: 1px dotted rgba(119,136,153, 0.5);
     transition: all 300ms;
+    max-width: 85%;
 
 }
 
@@ -200,6 +201,14 @@ footer{
     right: 0;
     left: 47%;
     z-index: 20000;
+}
+
+@media screen and (max-width: 400px){
+
+    .point-indicator {
+        bottom: 150px;
+    }
+
 }
 
 .blink {
